<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBrown"
    tools:context=".CreateOrderActivity">

    <TextView
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/textViewHello"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/darkBrown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewHello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioButtonTea"
            android:textColor="@color/white"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tea"
            android:checked="true"
            android:onClick="onClickChangeDrink"/>

        <RadioButton
            android:id="@+id/radioButtonCoffe"
            android:textColor="@color/white"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffe"
            android:onClick="onClickChangeDrink"/>

    </RadioGroup>
    <TextView
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/darkBrown"
        android:layout_margin="8dp"
        android:id="@+id/textViewAdditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additions"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:layout_margin="8dp"
        android:id="@+id/checkBoxMilk"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        android:text="@string/milk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/checkBoxSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:textColor="@color/white"
        android:layout_margin="8dp"
        android:id="@+id/checkBoxSugar"
        app:layout_constraintStart_toEndOf="@id/checkBoxMilk"
        app:layout_constraintEnd_toStartOf="@id/checkBoxLemon"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        android:text="@string/sugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:textColor="@color/white"
        android:layout_margin="8dp"
        android:id="@+id/checkBoxLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkBoxSugar"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions" />

    <TextView
        android:gravity="center"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textColor="@color/darkBrown"
        android:textStyle="bold"
        android:id="@+id/textViewChooseDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_drin"
        app:layout_constraintTop_toBottomOf="@id/checkBoxMilk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:textColor="@color/white"
        android:layout_margin="8dp"
        android:id="@+id/spinnerTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/options_of_tea"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Spinner
        android:textColor="@color/white"
        android:layout_margin="8dp"
        android:id="@+id/spinnerCoffe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:entries="@array/options_of_coffe"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:layout_margin="8dp"
        android:id="@+id/buttonSendOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/button2b"
        android:contentDescription="@string/button_send_description"
        app:layout_constraintTop_toBottomOf="@id/spinnerTea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="onClickSendOrder"/>

</androidx.constraintlayout.widget.ConstraintLayout>